# Pixitale

./: .gitmodules  README.md  compile_commands.json  image.jpg~  todo.md
.github/workflows/: android_builds.yml  builds.yml  ios_builds.yml  linux_builds.yml  macos_builds.yml  runner.yml  web_builds.yml  windows_builds.yml
_extension/: Cargo.toml
_extension/.cargo/: config.toml
_extension/src/: cell.rs  chunk.rs  data.rs  grid_node.rs  lib.rs  material.rs  phf_range.rs  util.rs
_extension/src/simulation/: mod.rs
art/: guy1.kra  try style.kra
client/: DELETE.gd  DELETE.tscn  WIP.tscn  project.godot  torso.png.import
client/base/: base.gd  base_edits.gd  cell_materials.tscn  cell_reactions.tscn  entry.tres  entry_script.gd  generation_passes.tscn  grid_edits.gd
cpp/: compile_commands.json
cs/: Node2D.gd  Pixitale.sln  node_2d.cs  node_cs.tscn  project.godot  sum gd.tscn
custom/: SCsub  biome.cpp  biome.h  cell.hpp  cell_material.cpp  cell_material.h  cell_material.hpp  cell_reaction.cpp  cell_reaction.h  chunk.cpp  chunk.h  generation.cpp  generation.h  generation_api.cpp  generation_api.h  generation_pass.cpp  generation_pass.h  grid.cpp  grid.h  grid_body.cpp  grid_body.h  grid_character_body.cpp  grid_character_body.h  grid_iter.cpp  grid_iter.h  image_packer.cpp  image_packer.h  preludes.h  rect_query.cpp  rect_query.h  register_types.cpp  rng.hpp  tests.cpp  tests.h
gdext/: .gitignore  .sconsign.dblite  SConstruct  compile_commands.json
godot/: .gitignore  Screenshot.png.import  icon.svg.import  project.godot
pixitale/: project.godot
(+285 files in other folders)
